--- a/public/index.html
+++ b/public/index.html
@@ -80,7 +80,7 @@
 
   <body>
     <div class="info">
-      <h1>cicd-test-app</h1>
+      <h1>cicd-reference-app</h1>
       <p>Version 1.0.0</p>
 
       <h3>OpenAPI spec: <a href="./openapi.json">/openapi.json</a></h3>
